Fix spacing in mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -4,6 +4,10 @@ header {
   width: inherit;
 }
 
+h1 {
+  margin-bottom: 20px;
+}
+
 main {
   min-width: 320px;
 }
