--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ h1 {
 h2 {
   font-family: 'Montserrat', sans-serif;
   font-size: 40px;
+  line-height: 50px;
   margin-bottom: 20px;
 }
 
